fix(images): add type to webp images, wrap webp-images with picture element (#31)

--- a/styles/includes/_overlap.scss
+++ b/styles/includes/_overlap.scss
@@ -55,13 +55,17 @@
 
 	&__img--left,
 	&__img--right {
-		height: auto;
-		width: 100%;
+		img {
+			height: auto;
+			width: 100%;
+		}
 	}
 
 	&__img--left {
-		padding-top: 50%;
-		z-index: 2;
+		img {
+			padding-top: 50%;
+			z-index: 2;
+		}
 	}
 
 	&__txt {
